--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    
-    <meta name="description" content="Little Lemon is a delightful website filled with sunshine and all things citrusy. Explore our products, learn about our brand, and get inspired to add a touch of lemon zest to your life." />
 
+    <meta
+      name="description"
+      content="Little Lemon is a delightful website filled with sunshine and all things citrusy. Explore our products, learn about our brand, and get inspired to add a touch of lemon zest to your life."
+    />
     <meta property="og:title" content="Little Lemon: A Citrusy Delight" />
-    <meta property="og:description" content="Little Lemon is a delightful website filled with sunshine and all things citrusy. Explore our products, learn about our brand, and get inspired to add a touch of lemon zest to your life." />
-  
-    <meta property="og:image" content="%PUBLIC_URL%/images/little-lemon-social.jpg" /> 
+    <meta
+      property="og:description"
+      content="Little Lemon is a delightful website filled with sunshine and all things citrusy. Explore our products, learn about our brand, and get inspired to add a touch of lemon zest to your life."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/../src/images/Logo.png" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/my-app-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+
     <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
- 
   </body>
 </html>
